| Summary: | ASTERISK-25135: [patch]RTP Timeout hangup cause code missing | ||
| Reporter: | Olle Johansson (oej) | Labels: | |
| Date Opened: | 2015-05-27 04:35:04 | Date Closed: | 2015-10-13 14:30:58 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/Interoperability |
| Versions: | 1.8.32.3 11.20.0 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) rtp-timeout-cause-1.8.diff ( 1) rtp-timeout-cause-11.diff | |
| Description: | When issuing a hangup due to RTP timeouts the cause code is not set. I have selected 44 based on Cisco's implementation... | ||
| Comments: | By: Olle Johansson (oej) 2015-05-27 04:35:52.678-0500 Fix for 1.8 By: Birger "WIMPy" Harzenetter (wimpy) 2015-05-27 17:44:12.279-0500 Strange cause. I suggest 0x29 (or 41) which is also used if a cellphones looses connection. By: Rusty Newton (rnewton) 2015-05-28 19:05:54.663-0500 Does this issue affect 11 or 13? By: Olle Johansson (oej) 2015-05-30 10:52:35.653-0500 The cause was used by Cisco for RTP timeouts in SIP calls, which is why I picked it. I have followed either RFCs or Cisco earlier. Rusty - if it's in 1.8 I don't expect it to be fixed anywhere else. By: Rusty Newton (rnewton) 2015-06-05 17:03:37.322-0500 Thanks. When you get the patch on gerrit please add a link to the review on this issue. By: Matt Jordan (mjordan) 2015-10-13 12:18:16.447-0500 Looks like this is an issue in 11+ as well. A port of [~oej]'s patch to 11 is attached here as well. | ||